- You may no longer specify klines, dlines, xlines and resvs in ircd.conf.
  Instead, there is no support for banconfigs with a ".perm" extension,
  eg kline.conf.perm.  Anything within a .perm file will be read, but
  cannot be removed via the ircd.  The format of these files is the same
  format as their normal non-permanent counterpart.  So kline.conf.perm
  takes the same format as kline.conf, and so on.
- rehash and kill -HUP no longer reread the ban configs kline.conf etc.
  You must now use /rehash bans, or kill -USR2
- New config option to general {};, dline_with_reason = yes|no;.  Default no.
  Traditionally, when a client connects and is dlined, the reason is never
  shown.  Enabling this will output the reason to clients.


Client
------
- Support for "deaf", umode +D.  When a client is 'deaf', they will not
  receive any messages sent towards channels.  They will still receive joins
  etc, but normal channel chat will not be sent.  Any private messages
  will still be sent.
- Target change anti-spam system.  Restrictions are now placed upon how many
  different clients (not channels) can be messaged within a specific time
  period.
- Client capabilities.

Oper
----
- RESVs are now tracked.  Stats q/Q have been modified so that the first
  field of the output is now a number indicating how many times the RESV
  has been hit.

ratbox-services support (non-efnet)
-----------------------------------
- For those of you using ratbox-services, there is now compatibility code
  within ircd, enabled by passing '--enable-services' to configure.
  See doc/services.txt for more information.

Code cleanups
-------------
- Removed the custom file implementation, use the system one instead.
- The hook system has been redesigned, theres now a more thorough set of
  hooks that may be used.  See docs/hooks.txt
- Removed support for VMS.  It hasnt worked for a long time.
- Cleanups to the expiry of temp klines/dlines.
- Various other things ;-).
